--- a/index.html
+++ b/index.html
@@ -2,29 +2,10 @@
 <html>
 <head>
   <meta charset="utf-8">
-      <style>
-a:link, a:visited {
-    background-color: #646466;
-    color: #B44E32;
-    padding: 14px 25px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-}
 
-
-a:hover, a:active {
-    background-color: #7D1C68;
-}
-</style>
-      <h1>
- <a href="http://www.burgas.tech">Burgas.tech</a>
-      </h1>
-      <h1 class="tagline">
-      Coding academy
-      </h1>
       <link rel="stylesheet" type="text/css" href="index.css">
       <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
+      <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
 
 <body>
@@ -106,8 +87,15 @@ a:hover, a:active {
       <div id="middle"><a href="middle"></a>Middle</div>
 
       <div id="bottom"><a href="bottom"></a>Bottom</div>
-      
+
 <!-- This is the code for the copyright content -->
+
+<h1>
+<a href="http://www.burgas.tech">Burgas.tech</a>
+</h1>
+<h1 class="tagline">
+Coding academy
+</h1>
 <div>
       <h2 class="lefttitle"> Кои сме ние? </h2>
       <p class="lefttext">
