Move CR into navbar code

--- a/index.html
+++ b/index.html
@@ -80,7 +80,32 @@
 
       </div>
 
-      <div id="home"><a href="home"></a>Home</div>
+      <div id="home"><a href="home"></a>Home
+        <h1>
+        <a href="http://www.burgas.tech">Burgas.tech</a>
+        </h1>
+        <h1 class="tagline">
+        Coding academy
+        </h1>
+        <div class="row">
+          <div class="col-lg-4">
+              <h2 class="text-center"> Кои сме ние? </h2>
+              <p>
+        Група от амбициозни младежи и хора с куража да научат програмирането.</p>
+        </div>
+        <div class="col-lg-4">
+              <h2 class="text-center"> Защо сме тук? </h2>
+              <p> Някои: за да учат, други: за да започнат кариера. Всички са добре дошли!  </p>
+        </div>
+        <div class="col-lg-4">
+              <h2 class="text-center">Какво постигнахме? </h2>
+              <p>Всичко което виждате пред вас е постигнато в рамките на 5 дена от същата група анбициозни хора.</p>
+            </div>
+            </div>
+
+
+
+      </div>
 
       <div id="top"><a href="top"></a>Top</div>
 
@@ -90,22 +115,6 @@
 
 <!-- This is the code for the copyright content -->
 
-<h1>
-<a href="http://www.burgas.tech">Burgas.tech</a>
-</h1>
-<h1 class="tagline">
-Coding academy
-</h1>
-<div>
-      <h2 class="lefttitle"> Кои сме ние? </h2>
-      <p class="lefttext">
-Група от амбициозни младежи и хора с куража да научат програмирането.</p>
 
-      <h2 class="middletitle"> Защо сме тук? </h2>
-      <p class="middletext"> Някои: за да учат, други: за да започнат кариера. Всички са добре дошли!  </p>
-
-      <h2 class="righttitle">Какво постигнахме? </h2>
-      <p class="righttext">Всичко което виждате пред вас е постигнато в рамките на 5 дена от същата група анбициозни хора.</p>
-    </div>
 </body>
 </html>
